# datakit-core

./: .gitignore  .travis.yml  AUTHORS.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
datakit/: __init__.py  command_helpers.py  config.py  datakit_app.py  help.py  main.py  utils.py
datakit/cli/: main.py
datakit/commands/: config.py
docs/: Makefile  conf.py  datakit.commands.rst  datakit.rst  developers.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
tests/: helpers.py  test_command_helpers.py  test_config.py  test_config_commands.py  test_datakit_app.py  test_help.py  test_utils.py  utils.py
